# sqswp035_isoquests_ufv

./: .dockerignore  .env  .env.production  ARQUITECTURA-SOLUCION.md  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.simple  README-Back4App.md  README.md  SOLUCION-URLS.md  analyze_db.py  complete_scenarios.py  config.js  debug_scenarios.py  docker-compose.yml  generate_config.py  llm_game_server.py  multi_server_startup.py  nginx.conf  patch_frontend.py  pyproject.toml  quality_scenarios_db.py  quality_scenarios_db_BACKUP.py  quality_scenarios_db_COMPLETED.py  requirement_rally_server.py  requirements.txt  requirements_scenarios.json  requirements_scenarios_db.py  start_server.py  startup.py  supervisord.conf  test_deployment.py  test_scenarios.py  test_simple_scenarios.py  update_bilingual_scenarios.py  usability_scenarios.json  usability_scenarios_db.py  usability_universe_server.py  (+1 more)
docs/: README.md
iso_standards_games/: __init__.py  __main__.py
iso_standards_games/agents/: __init__.py  base.py  game_agents.py
iso_standards_games/api/: app.py  routes.py
iso_standards_games/core/: config.py  localization.py  models.py
iso_standards_games/frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
iso_standards_games/games/: __init__.py  base.py  manager.py  quality_quest.py
iso_standards_games/llm/: __init__.py  provider.py
requirement-rally-frontend/: index.html  requirement-rally-fixed.js  requirement-rally.js
usability-universe-frontend/: index.html  usability-universe-backup.js  usability-universe.js
(+4 files in other folders)
